Modified loading page spinner and loading page for menus.

--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,27 @@ body {
   margin: 0;
 }
 
+.page {
+  position: fixed;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  animation: fadeIn2 0s 1s forwards;
+}
+
+@keyframes fadeIn2 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
 .spinner {
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 1;
   width: 200px;
   height: 200px;
   margin-top: -100px;
@@ -29,19 +45,6 @@ body {
   }
   100% {
     transform: rotate(360deg);
-    opacity: 0;
-  }
-}
-.page {
-  animation: fadeIn 0.5s 1s backwards;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
   }
 }
 .logo img {
@@ -576,753 +579,46 @@ header .bg-img {
 .menu__section__container__box--9 {
   animation-delay: 900ms;
 }
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.menu__button {
-  font-size: 15px;
-  color: white;
-  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
-  width: 180px;
-  height: 45px;
-  display: block;
-  border: none;
-  border-radius: 2em;
-  margin: 30px auto;
-  box-shadow: 5px 5px 7px #d6d3d3;
-}
-.menu__button:hover {
-  filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
-}
-
-footer {
-  background-color: #353535;
-  padding: 10px 20px 30px 25px;
-}
-@media screen and (min-width: 1024px) {
-  footer {
-    padding: 60px 30px 30px 25px;
-    position: relative;
-  }
-}
-footer h2 {
-  font-family: "Shrikhand", serif;
-  font-size: 18px;
-  color: #FEFEFE;
-}
-@media screen and (min-width: 1024px) {
-  footer h2 {
-    position: absolute;
-    bottom: 13px;
-    right: 60px;
-  }
-}
-footer .links {
-  list-style-type: none;
-  padding: 0px 20px 0px 0px;
-  margin: 0;
-  line-height: 160%;
-}
-@media screen and (min-width: 1024px) {
-  footer .links {
-    line-height: 0%;
-    text-align: right;
-    padding-right: 180px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  footer .links .link {
-    display: inline;
-    margin-right: 50px;
-  }
-}
-footer .links .link i {
-  width: 20px;
-  color: #FEFEFE;
-}
-footer .links .link .utensils {
-  font-size: 14px;
-}
-footer .links .link a {
-  color: #FEFEFE;
-  text-decoration: none;
-}
-footer .links .link .handshake-angle {
-  font-size: 10px;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: "Roboto", serif;
-}
-
-body {
-  margin: 0;
-}
-
-header .logo .logo-img {
-  display: block;
-  margin: 20px auto 14px auto;
-  width: 165px;
-  height: 28px;
-}
-header .logo .back-to-home-icon {
-  position: absolute;
-  top: 25px;
-  left: 20px;
-}
-header .logo .back-to-home-icon .back-to-home {
-  font-size: 20px;
-}
-header .bg-img {
-  width: 100%;
-  height: 270px;
-  object-fit: cover;
-}
-@media screen and (min-width: 768px) {
-  header .bg-img {
-    object-position: 50% 65%;
-  }
-}
-
-.menu {
-  background-color: #f6f6f6;
-  border-radius: 3em 3em 0 0;
-  padding: 15px 10px 50px 10px;
-}
-@media screen and (min-width: 768px) {
-  .menu {
-    margin-left: 150px;
-    margin-right: 150px;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .menu {
-    padding-left: 150px;
-    padding-right: 150px;
-  }
-}
-.menu__title {
-  position: relative;
-}
-.menu__title h1 {
-  font-family: "Shrikhand", serif;
-  font-size: 28px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-@media screen and (min-width: 1024px) {
-  .menu__title h1 {
-    margin-left: 40px;
-  }
-}
-.menu__title .like-icon {
-  position: absolute;
-  top: 10px;
-  right: 25px;
-}
-.menu__title .like-icon .heart {
-  font-size: 22px;
-}
-.menu__title .like-icon .solid-heart:hover {
-  opacity: 1;
-}
-.menu__title .like-icon .solid-heart {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: linear-gradient(225deg, #9356DC, #FF79DA);
-  background-clip: text;
-  color: transparent;
-  opacity: 0;
-  transition: opacity 500ms;
-}
-@media screen and (min-width: 1024px) {
-  .menu__title .like-icon {
-    right: 40px;
-  }
-}
-.menu__section {
-  padding-top: 5px;
-  padding-bottom: 15px;
-}
-.menu__section h2 {
-  font-size: 16px;
-  font-weight: 400;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-.menu__section hr {
-  width: 11%;
-  border: 1.5px solid #99E2D0;
-  margin-top: 0px;
-  margin-left: 10px;
-  margin-bottom: 15px;
-}
-.menu__section__container {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
-.menu__section__container__box {
-  background-color: #FEFEFE;
-  border-radius: 1em;
-  padding: 10px 10px;
-  box-shadow: 5px 5px 7px #d6d3d3;
-  position: relative;
-  animation: fadeIn 1s ease-in-out forwards;
-}
-.menu__section__container__box .details h3 {
-  font-size: 17px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.menu__section__container__box .details p {
-  font-size: 15px;
-  font-weight: 300;
-  margin-top: 5px;
-  margin-bottom: 0px;
-}
-.menu__section__container__box .price {
-  font-size: 15px;
-  font-weight: 700;
-  position: absolute;
-  right: 20px;
-  bottom: 10px;
-}
-.menu__section__container__box--1 {
-  animation-delay: 100ms;
-}
-.menu__section__container__box--2 {
-  animation-delay: 200ms;
-}
-.menu__section__container__box--3 {
-  animation-delay: 300ms;
-}
-.menu__section__container__box--4 {
-  animation-delay: 400ms;
-}
-.menu__section__container__box--5 {
-  animation-delay: 500ms;
-}
-.menu__section__container__box--6 {
-  animation-delay: 600ms;
-}
-.menu__section__container__box--7 {
-  animation-delay: 700ms;
-}
-.menu__section__container__box--8 {
-  animation-delay: 800ms;
-}
-.menu__section__container__box--9 {
-  animation-delay: 900ms;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.menu__button {
-  font-size: 15px;
-  color: white;
-  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
-  width: 180px;
-  height: 45px;
-  display: block;
-  border: none;
-  border-radius: 2em;
-  margin: 30px auto;
-  box-shadow: 5px 5px 7px #d6d3d3;
-}
-.menu__button:hover {
-  filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
-}
-
-footer {
-  background-color: #353535;
-  padding: 10px 20px 30px 25px;
-}
-@media screen and (min-width: 1024px) {
-  footer {
-    padding: 60px 30px 30px 25px;
-    position: relative;
-  }
-}
-footer h2 {
-  font-family: "Shrikhand", serif;
-  font-size: 18px;
-  color: #FEFEFE;
-}
-@media screen and (min-width: 1024px) {
-  footer h2 {
-    position: absolute;
-    bottom: 13px;
-    right: 60px;
-  }
-}
-footer .links {
-  list-style-type: none;
-  padding: 0px 20px 0px 0px;
-  margin: 0;
-  line-height: 160%;
-}
-@media screen and (min-width: 1024px) {
-  footer .links {
-    line-height: 0%;
-    text-align: right;
-    padding-right: 180px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  footer .links .link {
-    display: inline;
-    margin-right: 50px;
-  }
-}
-footer .links .link i {
-  width: 20px;
-  color: #FEFEFE;
-}
-footer .links .link .utensils {
-  font-size: 14px;
-}
-footer .links .link a {
-  color: #FEFEFE;
-  text-decoration: none;
-}
-footer .links .link .handshake-angle {
-  font-size: 10px;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: "Roboto", serif;
-}
-
-body {
-  margin: 0;
-}
-
-header .logo .logo-img {
-  display: block;
-  margin: 20px auto 14px auto;
-  width: 165px;
-  height: 28px;
-}
-header .logo .back-to-home-icon {
-  position: absolute;
-  top: 25px;
-  left: 20px;
-}
-header .logo .back-to-home-icon .back-to-home {
-  font-size: 20px;
-}
-header .bg-img {
-  width: 100%;
-  height: 270px;
-  object-fit: cover;
-}
-@media screen and (min-width: 768px) {
-  header .bg-img {
-    object-position: 50% 65%;
-  }
-}
-
-.menu {
-  background-color: #f6f6f6;
-  border-radius: 3em 3em 0 0;
-  padding: 15px 10px 50px 10px;
-}
-@media screen and (min-width: 768px) {
-  .menu {
-    margin-left: 150px;
-    margin-right: 150px;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .menu {
-    padding-left: 150px;
-    padding-right: 150px;
-  }
-}
-.menu__title {
-  position: relative;
-}
-.menu__title h1 {
-  font-family: "Shrikhand", serif;
-  font-size: 28px;
-  text-wrap: wrap;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 100px;
-}
-@media screen and (min-width: 1024px) {
-  .menu__title h1 {
-    margin-left: 40px;
-    margin-right: 0px;
-  }
-}
-.menu__title .like-icon {
-  position: absolute;
-  top: 10px;
-  right: 25px;
-}
-.menu__title .like-icon .heart {
-  font-size: 22px;
-}
-.menu__title .like-icon .solid-heart:hover {
-  opacity: 1;
-}
-.menu__title .like-icon .solid-heart {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: linear-gradient(225deg, #9356DC, #FF79DA);
-  background-clip: text;
-  color: transparent;
-  opacity: 0;
-  transition: opacity 500ms;
-}
-@media screen and (min-width: 1024px) {
-  .menu__title .like-icon {
-    right: 40px;
-  }
-}
-.menu__section {
-  padding-top: 5px;
-  padding-bottom: 15px;
-}
-.menu__section h2 {
-  font-size: 16px;
-  font-weight: 400;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-.menu__section hr {
-  width: 11%;
-  border: 1.5px solid #99E2D0;
-  margin-top: 0px;
-  margin-left: 10px;
-  margin-bottom: 15px;
-}
-.menu__section__container {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
-.menu__section__container__box {
-  background-color: #FEFEFE;
-  border-radius: 1em;
-  padding: 10px 10px;
-  box-shadow: 5px 5px 7px #d6d3d3;
-  position: relative;
-  animation: fadeIn 1s ease-in-out forwards;
-}
-.menu__section__container__box .details h3 {
-  font-size: 17px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.menu__section__container__box .details p {
-  font-size: 15px;
-  font-weight: 300;
-  margin-top: 5px;
-  margin-bottom: 0px;
-}
-.menu__section__container__box .price {
-  font-size: 15px;
-  font-weight: 700;
-  position: absolute;
-  right: 20px;
-  bottom: 10px;
-}
-.menu__section__container__box--1 {
-  animation-delay: 100ms;
-}
-.menu__section__container__box--2 {
-  animation-delay: 200ms;
-}
-.menu__section__container__box--3 {
-  animation-delay: 300ms;
-}
-.menu__section__container__box--4 {
-  animation-delay: 400ms;
-}
-.menu__section__container__box--5 {
-  animation-delay: 500ms;
-}
-.menu__section__container__box--6 {
-  animation-delay: 600ms;
-}
-.menu__section__container__box--7 {
-  animation-delay: 700ms;
-}
-.menu__section__container__box--8 {
-  animation-delay: 800ms;
-}
-.menu__section__container__box--9 {
-  animation-delay: 900ms;
-}
 .menu__section__container__box--10 {
   animation-delay: 1000ms;
 }
-.menu__button {
-  font-size: 15px;
-  color: white;
-  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
-  width: 180px;
-  height: 45px;
-  display: block;
-  border: none;
-  border-radius: 2em;
-  margin: 30px auto;
-  box-shadow: 5px 5px 7px #d6d3d3;
+.menu__section__container__box--11 {
+  animation-delay: 1100ms;
 }
-.menu__button:hover {
-  filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+.menu__section__container__box--12 {
+  animation-delay: 1200ms;
 }
-
-footer {
-  background-color: #353535;
-  padding: 10px 20px 30px 25px;
+.menu__section__container__box--13 {
+  animation-delay: 1300ms;
 }
-@media screen and (min-width: 1024px) {
-  footer {
-    padding: 60px 30px 30px 25px;
-    position: relative;
+.menu__section__container__box--14 {
+  animation-delay: 1400ms;
+}
+.menu__section__container__box--15 {
+  animation-delay: 1500ms;
+}
+.menu__section__container__box--16 {
+  animation-delay: 1600ms;
+}
+.menu__section__container__box--17 {
+  animation-delay: 1700ms;
+}
+.menu__section__container__box--18 {
+  animation-delay: 1800ms;
+}
+.menu__section__container__box--19 {
+  animation-delay: 1900ms;
+}
+.menu__section__container__box--20 {
+  animation-delay: 2000ms;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
   }
-}
-footer h2 {
-  font-family: "Shrikhand", serif;
-  font-size: 18px;
-  color: #FEFEFE;
-}
-@media screen and (min-width: 1024px) {
-  footer h2 {
-    position: absolute;
-    bottom: 13px;
-    right: 60px;
+  100% {
+    opacity: 1;
   }
-}
-footer .links {
-  list-style-type: none;
-  padding: 0px 20px 0px 0px;
-  margin: 0;
-  line-height: 160%;
-}
-@media screen and (min-width: 1024px) {
-  footer .links {
-    line-height: 0%;
-    text-align: right;
-    padding-right: 180px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  footer .links .link {
-    display: inline;
-    margin-right: 50px;
-  }
-}
-footer .links .link i {
-  width: 20px;
-  color: #FEFEFE;
-}
-footer .links .link .utensils {
-  font-size: 14px;
-}
-footer .links .link a {
-  color: #FEFEFE;
-  text-decoration: none;
-}
-footer .links .link .handshake-angle {
-  font-size: 10px;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: "Roboto", serif;
-}
-
-body {
-  margin: 0;
-}
-
-header .logo .logo-img {
-  display: block;
-  margin: 20px auto 14px auto;
-  width: 165px;
-  height: 28px;
-}
-header .logo .back-to-home-icon {
-  position: absolute;
-  top: 25px;
-  left: 20px;
-}
-header .logo .back-to-home-icon .back-to-home {
-  font-size: 20px;
-}
-header .bg-img {
-  width: 100%;
-  height: 270px;
-  object-fit: cover;
-}
-@media screen and (min-width: 768px) {
-  header .bg-img {
-    object-position: 50% 65%;
-  }
-}
-
-.menu {
-  background-color: #f6f6f6;
-  border-radius: 3em 3em 0 0;
-  padding: 15px 10px 50px 10px;
-}
-@media screen and (min-width: 768px) {
-  .menu {
-    margin-left: 150px;
-    margin-right: 150px;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .menu {
-    padding-left: 150px;
-    padding-right: 150px;
-  }
-}
-.menu__title {
-  position: relative;
-}
-.menu__title h1 {
-  font-family: "Shrikhand", serif;
-  font-size: 28px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-@media screen and (min-width: 1024px) {
-  .menu__title h1 {
-    margin-left: 40px;
-  }
-}
-.menu__title .like-icon {
-  position: absolute;
-  top: 10px;
-  right: 25px;
-}
-.menu__title .like-icon .heart {
-  font-size: 22px;
-}
-.menu__title .like-icon .solid-heart:hover {
-  opacity: 1;
-}
-.menu__title .like-icon .solid-heart {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: linear-gradient(225deg, #9356DC, #FF79DA);
-  background-clip: text;
-  color: transparent;
-  opacity: 0;
-  transition: opacity 500ms;
-}
-@media screen and (min-width: 1024px) {
-  .menu__title .like-icon {
-    right: 40px;
-  }
-}
-.menu__section {
-  padding-top: 5px;
-  padding-bottom: 15px;
-}
-.menu__section h2 {
-  font-size: 16px;
-  font-weight: 400;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-.menu__section hr {
-  width: 11%;
-  border: 1.5px solid #99E2D0;
-  margin-top: 0px;
-  margin-left: 10px;
-  margin-bottom: 15px;
-}
-.menu__section__container {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
-.menu__section__container__box {
-  background-color: #FEFEFE;
-  border-radius: 1em;
-  padding: 10px 10px;
-  box-shadow: 5px 5px 7px #d6d3d3;
-  position: relative;
-  animation: fadeIn 1s ease-in-out forwards;
-}
-.menu__section__container__box .details h3 {
-  font-size: 17px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-.menu__section__container__box .details p {
-  font-size: 15px;
-  font-weight: 300;
-  margin-top: 5px;
-  margin-bottom: 0px;
-}
-.menu__section__container__box .price {
-  font-size: 15px;
-  font-weight: 700;
-  position: absolute;
-  right: 20px;
-  bottom: 10px;
-}
-.menu__section__container__box--1 {
-  animation-delay: 100ms;
-}
-.menu__section__container__box--2 {
-  animation-delay: 200ms;
-}
-.menu__section__container__box--3 {
-  animation-delay: 300ms;
-}
-.menu__section__container__box--4 {
-  animation-delay: 400ms;
-}
-.menu__section__container__box--5 {
-  animation-delay: 500ms;
-}
-.menu__section__container__box--6 {
-  animation-delay: 600ms;
-}
-.menu__section__container__box--7 {
-  animation-delay: 700ms;
-}
-.menu__section__container__box--8 {
-  animation-delay: 800ms;
-}
-.menu__section__container__box--9 {
-  animation-delay: 900ms;
 }
 .menu__button {
   font-size: 15px;
