--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import 'utils/mixins';
 @import 'pages/home';
 @import 'pages/menu-Bastille';
-@import 'pages/menu-LeGourmand';
-@import 'pages/menu-TheEnchantedPlate';
-@import 'pages/menu-TheFullPlate';
+// @import 'pages/menu-LeGourmand';
+// @import 'pages/menu-TheEnchantedPlate';
+// @import 'pages/menu-TheFullPlate';
