--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,11 +7,29 @@ body {
     margin: 0;
 }
 
+.page {
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background-color: rgba($color: #ffffff, $alpha: 0.5);
+    animation: fadeIn2 0s 1s forwards;
+}
+
+@keyframes fadeIn2 {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
 .spinner {
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 1;
     width: 200px;
     height: 200px;
     margin-top: -100px;
@@ -30,21 +48,6 @@ body {
 
     100% {
         transform: rotate(360deg);
-        opacity: 0;
-    }
-}
-
-.page {
-    animation: fadeIn 0.5s 1s backwards;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
     }
 }
 
