--- a/sass/pages/_menu-Bastille.scss
+++ b/sass/pages/_menu-Bastille.scss
@@ -157,6 +157,69 @@ header {
                     bottom: 10px;
                 }
 
+                overflow: hidden;
+
+                .circle-check {
+                    width: 35px;
+                    height: 35px;
+                    border-radius: 50%;
+                    background-color: #FEFEFE;
+                    position: absolute;
+                    top: 15px;
+                    right: -60px;
+                    
+                    i {
+                        position: absolute;
+                        top: 9px;
+                        left: 9px;
+                    }
+
+                    .check {
+                        color: #99E2D0;
+                        font-size: 20px;
+                        font-weight: 900;
+                    }
+                }
+
+                &:hover {
+                    .selector {
+                        width: 80px;
+                        height: 63px;
+                        border-radius: 0 1em 1em 0;
+                        background-color: #99E2D0;
+                        position: absolute;
+                        top: 0;
+                        right: -80px;
+                        animation: slideIn 1.5s forwards;
+                    }
+
+                    .circle-check {
+                        animation: rotateIn 1.5s 1 forwards;
+                    }
+                }
+
+                @keyframes rotateIn {
+                    0% {
+                        transform: translateX(0) rotate(0);
+                    }
+        
+                    100% {
+                        transform: translateX(-80px) rotate(360deg);
+                    }
+                }
+
+                @keyframes slideIn {
+                    0% {
+                        width: 0;
+                        transform: translateX(0);
+                    }
+
+                    100% {
+                        width: 80px;
+                        transform: translateX(-80px);
+                    }
+                }
+
                 animation: fadeIn 1s ease-in-out forwards;
 
                 @for $i from 1 through 20 {
@@ -164,34 +227,37 @@ header {
                         animation-delay: 100ms * $i;
                     }
                 }
+
             }
         }
-    }
 
-    @keyframes fadeIn {
-        0% {
-            opacity: 0;
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(500px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0px);
+            }
         }
 
-        100% {
-            opacity: 1;
-        }
-    }
+        &__button {
+            font-size: 15px;
+            color: white;
+            background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+            width: 180px;
+            height: 45px;
+            display: block;
+            border: none;
+            border-radius: 2em;
+            margin: 30px auto;
+            box-shadow: 5px 5px 7px #d6d3d3;
 
-    &__button {
-        font-size: 15px;
-        color: white;
-        background-image: linear-gradient(0deg, #9356DC, #FF79DA);
-        width: 180px;
-        height: 45px;
-        display: block;
-        border: none;
-        border-radius: 2em;
-        margin: 30px auto;
-        box-shadow: 5px 5px 7px #d6d3d3;
-
-        &:hover {
-            filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+            &:hover {
+                filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+            }
         }
     }
 }
